--- a/pkg/graphics/stplot/psikern.template
+++ b/pkg/graphics/stplot/psikern.template
@@ -59,14 +59,14 @@ psi_port|psidbgp|PostScript Kernel default portrait:\
 
 psi_def|psi_land|Postscript Kernel Default 8.5x11in 300dpi Landscape:\
 	:ar#0.7552:ca:ch#.02644:co#80:cw#.02:fa:fs#6:\
-	:kf=stsdas$bin/x_psikern.e:\
+	:kf=st4gem$bin/x_psikern.e:\
 	:li#24:lt#4:pl:pm:se:tf#4:tn=psikern:tq#1:tx:xr#3063:xs#0.2594:\
 	:yr#2313:ys#0.1959:zr#256:\
 	:BO:\
 	:DD=psi_def,tmp$psk,!{ echo $F; }&:\
 	:FB=Times-Bold:FG=Symbol:FI=Times-Italic:FR=Times-Roman:\
-	:IF=stsdas$lib/psikern_prolog.ps:\
-	:LG=stsdas$lib/invxgterm:\
+	:IF=st4gem$lib/psikern_prolog.ps:\
+	:LG=st4gem$lib/invxgterm:\
 	:MF#100:PI#1.:PW#.00011:TD#.01221:TP#.001221:TS#.006104:\
 	:XO#0.01:YO#0.01:
 
@@ -79,13 +79,13 @@ psi_port|psidbgp|PostScript Kernel default portrait:\
 
 psi_def|psi_land|Postscript Kernel Default 8.5x11in 300dpi Landscape:\
 	:ar#0.7552:ca:ch#.02644:co#80:cw#.02:fa:fs#6:\
-	:kf=stsdas$bin/x_psikern.e:\
+	:kf=st4gem$bin/x_psikern.e:\
 	:li#24:lt#4:pl:pm:se:tf#4:tn=psikern:tq#1:tx:xr#3063:xs#0.2594:\
 	:yr#2313:ys#0.1959:zr#256:\
 	:BO:\
         :DD=psi_def,tmp$psk,write sys$output "$F":\
 	:FB=Times-Bold:FG=Symbol:FI=Times-Italic:FR=Times-Roman:\
-	:IF=stsdas$lib/psikern_prolog.ps:\
-	:LG=stsdas$lib/invxgterm:\
+	:IF=st4gem$lib/psikern_prolog.ps:\
+	:LG=st4gem$lib/invxgterm:\
 	:MF#100:PI#1.:PW#.00011:TD#.01221:TP#.001221:TS#.006104:\
 	:XO#0.01:YO#0.01:
